<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".countryInfoActivity">

    <TextView
        android:id="@+id/countryNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/country_name"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subRegionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/sub_region"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/subRegionTitleView"
        app:layout_constraintTop_toBottomOf="@+id/regionTitleView" />

    <TextView
        android:id="@+id/capitalView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/capital"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/capitalTitleView"
        app:layout_constraintTop_toBottomOf="@+id/countryNameView" />

    <TextView
        android:id="@+id/regionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/region"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/regionTitleView"
        app:layout_constraintTop_toBottomOf="@+id/PopulationTitleView" />

    <TextView
        android:id="@+id/languagesView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/languages"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/languagesTextView"
        app:layout_constraintTop_toBottomOf="@+id/subRegionTitleView" />

    <TextView
        android:id="@+id/populationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/population"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/PopulationTitleView"
        app:layout_constraintTop_toBottomOf="@+id/capitalTitleView" />

    <TextView
        android:id="@+id/capitalTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/capitalTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryNameView" />

    <TextView
        android:id="@+id/PopulationTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/populationTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capitalTitleView" />

    <TextView
        android:id="@+id/regionTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/regionTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PopulationTitleView" />

    <TextView
        android:id="@+id/subRegionTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/sub_regionTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regionTitleView" />

    <TextView
        android:id="@+id/languagesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/languagesTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subRegionTitleView" />

</androidx.constraintlayout.widget.ConstraintLayout>